With correct form sand

--- a/realty/templates/realty/realty.html
+++ b/realty/templates/realty/realty.html
@@ -38,10 +38,9 @@
                 <h4 class="text-info">Price&nbsp; {{ el.price }} &nbsp; $</h4>
               <p class="card-text">{{ el.full_text }}</p>
               <ul class="list-inline md-mb-2 text-center">
-                <li class="list-inline-item"> <span class="px-4 mb-0"><i class="fa-solid {{ el.facilities_fir }}"></i></span> </li>
-                <li class="list-inline-item"> <span class="px-4 mb-0"><i class="fa-solid {{ el.facilities_sec }}"></i></span> </li>
-                <li class="list-inline-item"> <span class="px-4 mb-0"><i class="fa-solid {{ el.facilities_th }}"></i></span> </li>
-                <li class="list-inline-item"> <span class="px-4 mb-0"><i class="fa-solid {{ el.facilities_fou }}"></i></span> </li>
+                    
+                <li class="list-inline-item"> <span class="px-4 mb-0"><i class="fa-solid {{ el.facilities }}"></i></span> </li>
+                  
             </ul>
             <div class="mybtn mb-md-4">
                <a href="#" class="btn btn-secondary">{{ el.label_btn }}<i class="bi bi-star"></i></a>
