--- a/realty/templates/realty/create.html
+++ b/realty/templates/realty/create.html
@@ -6,9 +6,17 @@
     <h1>Form add object</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {% for field in form %}
-           {{ field }} <br />
-        {% endfor %}
+        {{ form.title }}
+        {{ form.full_text }}
+        {{ form.price }}
+        {{ form.date }}
+           {% for value, text in form.facilities.field.choices %}
+        <div class="ui slider checkbox">
+          <input id="id_facilities_{{ forloop.counter0 }}" name="{{ form.facilities.name }}" type="checkbox" value="{{ value }}"{% if value in checked_facilities %} checked="checked"{% endif %}>
+          <label>{{ text }}</label>
+        </div>
+           {% endfor %}
+
         {{ imageform.management_form }}
         {% for form in imageform %}
             {{ form }}
